006_security/pod_imagePullSecrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  -  image: nginx
     name: nginx
  # kubectl create secret docker-registry regcred \
  # --docker-server=PRIVATE_REGISTRY_URL \
  # --docker-username=REGISTRY_USERNAME \
  # --docker-password=REGISTRY_PASSWORD \
  # --docker-email=REGISTRY_EMAIL
  imagePullSecrets:
  - name: regcred
