006_security/pod_securityContext.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
  -  image: ubuntu
     name: ubuntu
     command: ["sleep", "3600"]
     securityContext:
      runAsUser: 1000
      capabilities:
        add: ["MAC_ADMIN"]
