006_security/pod_serviceAccountName.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  -  image: nginx
     name: nginx
  # kubectl exec -it kubernetes-dashboard -- ls /var/run/secrets/kubernetes.io/serviceaccount
  serviceAccountName: your-service-account
  # automountServiceAccountToken: false
